# crypto-auto

./: .env.example  .gitignore  CLAUDE.md  README.md  cryptos.json  pyproject.toml
.github/workflows/: weekly-update.yml
crypto_auto/: main.py
crypto_auto/analysis/: fdv_analyzer.py  rebalancer.py
crypto_auto/api/: base.py  defillama.py  github_api.py
crypto_auto/config/: loader.py  settings.py
crypto_auto/models/: analysis.py  crypto.py  market_data.py
crypto_auto/outputs/: console.py  json_writer.py
docs/: makecom-integration.md
scripts/: analyze-newsletters.sh
tests/: conftest.py
tests/integration/: test_main_flow.py
tests/unit/: test_defillama.py  test_fdv_analyzer.py  test_github_api.py  test_rebalancer.py
